# django-lexorank

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml  tests.yml
django_lexorank/: admin.py  apps.py  fields.py  lexorank.py  managers.py  models.py
django_lexorank/admin/: __init__.py  scheduled_rebalancing.py
django_lexorank/migrations/: 0001_initial.py
django_lexorank/models/: __init__.py  ranked_model.py  scheduled_rebalancing.py
tests/: conftest.py  factories.py  fixtures.py  models.py  settings.py  test_manager.py  test_model.py
