[tool.poetry]
name = "django-lexorank"
version = "0.1.0"
description = "A reference implementation of a list ordering system like JIRA's Lexorank algorithm for Django."
authors = ["Alex Rozum <rozumalex@gmail.com>"]
packages = [
    {include="django_lexorank"}
]
license = "MIT"
readme = "README.md"


[tool.poetry.urls]
"Homepage" = "https://github.com/rozumdev/django-lexorank/"
"Bug Tracker" = "https://github.com/rozumdev/django-lexorank/issues/"


[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.4"


[tool.poetry.group.dev.dependencies]
pytest-django = "^4.5.2"
factory-boy = "^3.3.0"
django-extensions = "^3.2.3"
pre-commit = "^3.3.3"

[tool.flake8]
max-complexity = 15
max-line-length = 88

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "conf.settings"
pythonpath = ["app/"]
addopts = "--reuse-db"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
